19_React_Dog/src/App.css
@font-face {
    font-family: gilroy;
    src: url(/Gilroy-Light.otf);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: gilroy;
}

html,
body,
#root {
    width: 100%;
    background: #000;
    color: #fff;
}

main {
    position: relative;
    overflow-x: hidden;
}

section {
    min-height: 100vh;
    position: relative;
    z-index: 2;
}

#canvas-elem::after {
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
    z-index: -1;
    background-image: url(/background-m.png);
    background-size: cover;
    background-repeat: no-repeat;
    transition: all 0.3s linear;
}

/* #section-1 */
#section-1 {
    --gap: 3rem;

    display: flex;
    flex-direction: column;
    gap: 3rem;

    /* Nav */
    nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 2rem;
        padding-top: 3rem;

        .nav-elem:nth-child(2) {
            font-size: 0.7rem;
            i {
                color: red;
            }
        }

        svg {
            max-width: 5rem;
            width: 100%;
            height: 100%;
        }
    }

    /* Middle */

    .middle {
        width: 100%;
        display: flex;
        justify-self: center;
        align-items: center;
        gap: var(--gap);
        .left,
        .right {
            width: 50%;
        }

        .left {
            display: flex;
            align-items: center;
            justify-content: flex-end;
            padding-block: 3rem;

            h1 {
                font-size: 6rem;
                line-height: 0.9;
                text-align: right;
            }
        }
    }

    .bottom {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: var(--gap);

        .left,
        .right {
            width: 50%;
        }

        .right {
            display: flex;
            flex-direction: column;
            gap: 1rem;

            p {
                width: 40%;
                font-size: 1.2rem;
            }

            p:nth-child(2) {
                font-size: 0.8rem;
                opacity: 0.6;
            }

            /* Links */

            .links {
                display: flex;
                gap: 1rem;

                .link {
                    text-decoration: none;
                    color: #fff;
                    font-size: 0.65rem;
                    margin-top: 4rem;
                }
            }
        }
    }

    /* Lines */
    .first-line {
        width: 40rem;
        background-color: rgba(255, 0, 0, 0.534);
        height: 1px;
        position: absolute;
        top: 55%;
        left: 18%;
        transform: translate(-50%, -50%) rotate(45deg);
    }

    .second-line {
        width: 10rem;
        background-color: rgba(255, 0, 0, 0.534);
        height: 1px;
        position: absolute;
        top: 35%;
        left: 85%;
        transform: translate(-120%, -50%) rotate(-45deg);
    }
}

#section-2 {
    h5 {
        margin-top: 18rem;
        font-size: 0.7rem;
        opacity: 0.5;
        width: 50%;
        text-align: center;
    }

    .titles {
        margin-top: 2rem;
        display: flex;
        flex-direction: column;
        padding-inline: 2rem;

        .title {
            display: flex;
            gap: 4rem;
            opacity: 0.2;
            padding-block: 1rem;

            transition: all 0.3s linear;
            cursor: pointer;

            h2 {
                font-size: 5rem;
                font-weight: 100;
                line-height: 1;
            }

            small {
                width: 10%;
                text-align: right;
                margin-top: 0.9rem;
            }
        }

        .title:hover {
            opacity: 1;
        }
    }

    .line3 {
        position: absolute;
        bottom: 20%;
        left: 90%;
        transform: translate(-50%, -50%) rotate(-45deg);
        width: 40rem;
        background: red;
        height: 1px;
        opacity: 0.7;
    }
}

main:has(#section-2 .titles .title:hover) #canvas-elem::after {
    opacity: 0;
}

/* Background Images */

.images {
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;

    img {
        height: 100%;
        width: 100%;
        object-fit: cover;
        position: absolute;
        top: 0;
        left: 0;
        opacity: 0;

        transition: all 0.3s linear;
    }
}

main:has(#section-2 .titles .title[img-title="tomoroland"]:hover)
    .images
    #tomoroland {
    opacity: 1;
    background: rgb(10, 13, 43);
}

main:has(#section-2 .titles .title[img-title="navi-pier"]:hover)
    .images
    #navi-pier {
    opacity: 1;
    background: #080e1d;
}

main:has(#section-2 .titles .title[img-title="msi-chicago"]:hover)
    .images
    #msi-chicago {
    opacity: 1;
    background: #0e1b2e;
}

main:has(#section-2 .titles .title[img-title="louises"]:hover)
    .images
    #louises {
    opacity: 1;
    background: #0c1321;
}

main:has(#section-2 .titles .title[img-title="kikk-festival"]:hover)
    .images
    #kikk-festival {
    opacity: 1;
    background: #1a4db9d9;
}

main:has(#section-2 .titles .title[img-title="kennedy-center"]:hover)
    .images
    #kennedy-center {
    opacity: 1;
    background: #083b3b93;
}

main:has(#section-2 .titles .title[img-title="royal-opera"]:hover)
    .images
    #royal-opera {
    opacity: 1;
    background: #6d0e0ed2;
}
/* ... */

